--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -31,13 +31,14 @@
 
 .title {
 	text-align: center;
-	margin: 0;
+	margin-bottom: 20px;
 	line-height: 1.15;
 	font-size: 4rem;
 }
 
 .description {
-	margin: 30px 0 20px;
+	text-align: center;
+	margin: 20px 0 10px;
 }
 
 .postsContainer {
@@ -46,6 +47,7 @@
 	max-width: 85vw;
 
 	padding: 20px;
+	margin: 10px 0 40px;
 
 	border: 1px solid gray;
 	border-radius: 10px;
